test/valid/fc36994_TestInstanceOf/TestInstanceOf.plume
/**
 * Tests instanceOf
 * @author 36994, César Santos
 */
class TestInstanceOf extends Object is
  method main : () -> String is //expected : true
    (new InstanceOfTest()).test(true).toString()