test/invalid/RepeatedExtends/RepeatedExtends.plume
/**
 * Repeated inheritance
 * @author 36994, César Santos
 */
class RepeatedExtends extends Object extends Object is
  method test : () -> Boolean is
    true